--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "sequelize": "^6.16.1"
   },
   "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   }
