--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sequelize": "^6.16.1"
   },
   "devDependencies": {
+    "eslint": "^8.9.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   }
