--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "run-p sass:watch watch",
+    "dev": "run-p sass:watch watch seeds",
     "watch": "nodemon server.js",
     "seeds": "node seeds/index.js",
     "sass:build": "sass public/sass:public/stylesheets",
