--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
+    "npm-run-all": "^4.1.5",
+    "run-p": "0.0.0",
+    "sass": "^1.49.8",
     "sequelize": "^6.16.1"
   },
   "devDependencies": {
