--- a/package.json
+++ b/package.json
@@ -1,521 +1,15 @@
 {
-  "name": "travel-lovers",
+  "name": "travel-app",
   "version": "1.0.0",
-  "description": "## Description Travel Lovers is an application that allows a travel enthusiast to create an account to log past, upcoming, and bucket-list trips.",
+  "description": "Travel app that allows people to add destinations to a bucket list, seasonal, planned and already visited",
   "main": "server.js",
-  "dependencies": {
-    "accepts": "^1.3.8",
-    "acorn-globals": "^6.0.0",
-    "abab": "^2.0.5",
-    "acorn-jsx": "^5.3.2",
-    "agent-base": "^6.0.2",
-    "acorn": "^8.7.0",
-    "ajv": "^6.12.6",
-    "acorn-walk": "^7.2.0",
-    "ansi-align": "^3.0.1",
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^4.3.0",
-    "aproba": "^2.0.0",
-    "anymatch": "^3.1.2",
-    "abbrev": "^1.1.1",
-    "ansi-escapes": "^4.3.2",
-    "argparse": "^2.0.1",
-    "are-we-there-yet": "^2.0.0",
-    "array-flatten": "^1.1.1",
-    "array-includes": "^3.1.4",
-    "asynckit": "^0.4.0",
-    "array.prototype.flat": "^1.2.5",
-    "available-typed-arrays": "^1.0.5",
-    "babel-preset-current-node-syntax": "^1.0.1",
-    "babel-plugin-jest-hoist": "^27.5.1",
-    "babel-plugin-istanbul": "^6.1.1",
-    "babel-preset-jest": "^27.5.1",
-    "balanced-match": "^1.0.2",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.2",
-    "babel-jest": "^27.5.1",
-    "binary-extensions": "^2.2.0",
-    "boxen": "^5.1.2",
-    "brace-expansion": "^1.1.11",
-    "browserslist": "^4.19.3",
-    "browser-process-hrtime": "^1.0.0",
-    "bser": "^2.1.1",
-    "braces": "^3.0.2",
-    "bytes": "^3.1.2",
-    "buffer-from": "^1.1.2",
-    "cacheable-request": "^6.1.0",
-    "camelcase": "^5.3.1",
-    "callsites": "^3.1.0",
-    "caniuse-lite": "^1.0.30001312",
-    "call-bind": "^1.0.2",
-    "char-regex": "^1.0.2",
-    "chalk": "^4.1.2",
-    "chokidar": "^3.5.3",
-    "ci-info": "^3.3.0",
-    "chownr": "^2.0.0",
-    "cjs-module-lexer": "^1.2.2",
-    "cliui": "^7.0.4",
-    "clone-response": "^1.0.2",
-    "co": "^4.6.0",
-    "collect-v8-coverage": "^1.0.1",
-    "color-name": "^1.1.4",
-    "color-support": "^1.1.3",
-    "combined-stream": "^1.0.8",
-    "cli-boxes": "^2.2.1",
-    "connect-session-sequelize": "^7.1.2",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.4",
-    "configstore": "^5.0.1",
-    "cookie": "^0.4.2",
-    "confusing-browser-globals": "^1.0.11",
-    "convert-source-map": "^1.8.0",
-    "cross-spawn": "^7.0.3",
-    "cookie-signature": "^1.0.6",
-    "crypto-random-string": "^2.0.0",
-    "cssom": "^0.4.4",
-    "cssstyle": "^2.3.0",
-    "debug": "^4.3.3",
-    "data-urls": "^2.0.0",
-    "color-convert": "^2.0.1",
-    "decimal.js": "^10.3.1",
-    "decompress-response": "^3.3.0",
-    "dedent": "^0.7.0",
-    "deep-extend": "^0.6.0",
-    "console-control-strings": "^1.1.0",
-    "deep-equal": "^2.0.5",
-    "deep-is": "^0.1.4",
-    "defer-to-connect": "^1.1.3",
-    "deepmerge": "^4.2.2",
-    "delayed-stream": "^1.0.0",
-    "define-properties": "^1.1.3",
-    "delegates": "^1.0.0",
-    "denque": "^2.0.1",
-    "depd": "^1.1.2",
-    "destroy": "^1.0.4",
-    "detect-libc": "^1.0.3",
-    "detect-newline": "^3.1.0",
-    "diff-sequences": "^27.5.1",
-    "domexception": "^2.0.1",
-    "concat-map": "^0.0.1",
-    "doctrine": "^3.0.0",
-    "dot-prop": "^5.3.0",
-    "dotenv": "^16.0.0",
-    "dottie": "^2.0.2",
-    "duplexer3": "^0.1.4",
-    "ee-first": "^1.1.1",
-    "emittery": "^0.8.1",
-    "electron-to-chromium": "^1.4.72",
-    "emoji-regex": "^8.0.0",
-    "encodeurl": "^1.0.2",
-    "end-of-stream": "^1.4.4",
-    "es-get-iterator": "^1.1.2",
-    "error-ex": "^1.3.2",
-    "es-abstract": "^1.19.1",
-    "escalade": "^3.1.1",
-    "escape-goat": "^2.1.1",
-    "escape-html": "^1.0.3",
-    "escodegen": "^2.0.0",
-    "escape-string-regexp": "^4.0.0",
-    "eslint-module-utils": "^2.7.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint": "^8.9.0",
-    "eslint-scope": "^7.1.1",
-    "eslint-import-resolver-node": "^0.3.6",
-    "espree": "^9.3.1",
-    "eslint-visitor-keys": "^3.3.0",
-    "esprima": "^4.0.1",
-    "eslint-utils": "^3.0.0",
-    "esquery": "^1.4.0",
-    "esrecurse": "^4.3.0",
-    "esutils": "^2.0.3",
-    "estraverse": "^5.3.0",
-    "execa": "^5.1.1",
-    "etag": "^1.8.1",
-    "exit": "^0.1.2",
-    "expect": "^27.5.1",
-    "express": "^4.17.3",
-    "express-handlebars": "^6.0.2",
-    "express-session": "^1.17.2",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fast-deep-equal": "^3.1.3",
-    "fast-levenshtein": "^2.0.6",
-    "es-to-primitive": "^1.2.1",
-    "file-entry-cache": "^6.0.1",
-    "fb-watchman": "^2.0.1",
-    "fill-range": "^7.0.1",
-    "find-up": "^2.1.0",
-    "flatted": "^3.2.5",
-    "flat-cache": "^3.0.4",
-    "finalhandler": "^1.1.2",
-    "form-data": "^3.0.1",
-    "foreach": "^2.0.5",
-    "fresh": "^0.5.2",
-    "forwarded": "^0.2.0",
-    "fs-minipass": "^2.1.0",
-    "fs.realpath": "^1.0.0",
-    "function-bind": "^1.1.1",
-    "functional-red-black-tree": "^1.0.1",
-    "generate-function": "^2.3.1",
-    "gauge": "^3.0.2",
-    "gensync": "^1.0.0-beta.2",
-    "get-caller-file": "^2.0.5",
-    "get-package-type": "^0.1.0",
-    "get-intrinsic": "^1.1.1",
-    "get-stream": "^6.0.1",
-    "get-symbol-description": "^1.0.0",
-    "glob-parent": "^6.0.2",
-    "glob": "^7.2.0",
-    "global-dirs": "^3.0.0",
-    "globals": "^13.12.1",
-    "got": "^9.6.0",
-    "graceful-fs": "^4.2.9",
-    "handlebars": "^4.7.7",
-    "has": "^1.0.3",
-    "has-flag": "^4.0.0",
-    "has-bigints": "^1.0.1",
-    "has-symbols": "^1.0.2",
-    "has-tostringtag": "^1.0.0",
-    "has-unicode": "^2.0.1",
-    "has-yarn": "^2.1.0",
-    "hosted-git-info": "^2.8.9",
-    "html-encoding-sniffer": "^2.0.1",
-    "html-escaper": "^2.0.2",
-    "http-errors": "^1.8.1",
-    "http-cache-semantics": "^4.1.0",
-    "http-proxy-agent": "^4.0.1",
-    "https-proxy-agent": "^5.0.0",
-    "human-signals": "^2.1.0",
-    "iconv-lite": "^0.4.24",
-    "ignore-by-default": "^1.0.1",
-    "ignore": "^5.2.0",
-    "import-lazy": "^2.1.0",
-    "immutable": "^4.0.0",
-    "import-local": "^3.1.0",
-    "import-fresh": "^3.3.0",
-    "imurmurhash": "^0.1.4",
-    "inflection": "^1.13.2",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "ini": "^2.0.0",
-    "ipaddr.js": "^1.9.1",
-    "is-bigint": "^1.0.4",
-    "is-arguments": "^1.1.1",
-    "is-arrayish": "^0.2.1",
-    "is-boolean-object": "^1.1.2",
-    "is-binary-path": "^2.1.0",
-    "is-callable": "^1.2.4",
-    "is-ci": "^2.0.0",
-    "is-core-module": "^2.8.1",
-    "is-date-object": "^1.0.5",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-extglob": "^2.1.1",
-    "internal-slot": "^1.0.3",
-    "is-generator-fn": "^2.1.0",
-    "is-glob": "^4.0.3",
-    "is-installed-globally": "^0.4.0",
-    "is-map": "^2.0.2",
-    "is-npm": "^5.0.0",
-    "is-number": "^7.0.0",
-    "is-negative-zero": "^2.0.2",
-    "is-path-inside": "^3.0.3",
-    "is-number-object": "^1.0.6",
-    "is-obj": "^2.0.0",
-    "is-potential-custom-element-name": "^1.0.1",
-    "is-property": "^1.0.2",
-    "is-regex": "^1.1.4",
-    "is-set": "^2.0.2",
-    "is-shared-array-buffer": "^1.0.1",
-    "is-stream": "^2.0.1",
-    "is-symbol": "^1.0.4",
-    "is-typed-array": "^1.1.8",
-    "is-string": "^1.0.7",
-    "is-typedarray": "^1.0.0",
-    "is-weakref": "^1.0.2",
-    "is-weakmap": "^2.0.1",
-    "is-weakset": "^2.0.2",
-    "is-yarn-global": "^0.3.0",
-    "isarray": "^2.0.5",
-    "isexe": "^2.0.0",
-    "istanbul-lib-coverage": "^3.2.0",
-    "istanbul-lib-instrument": "^5.1.0",
-    "istanbul-lib-report": "^3.0.0",
-    "istanbul-reports": "^3.1.4",
-    "jest": "^27.5.1",
-    "jest-changed-files": "^27.5.1",
-    "istanbul-lib-source-maps": "^4.0.1",
-    "jest-circus": "^27.5.1",
-    "jest-config": "^27.5.1",
-    "jest-cli": "^27.5.1",
-    "jest-diff": "^27.5.1",
-    "jest-docblock": "^27.5.1",
-    "jest-environment-jsdom": "^27.5.1",
-    "jest-each": "^27.5.1",
-    "jest-environment-node": "^27.5.1",
-    "jest-get-type": "^27.5.1",
-    "jest-haste-map": "^27.5.1",
-    "jest-jasmine2": "^27.5.1",
-    "jest-leak-detector": "^27.5.1",
-    "jest-matcher-utils": "^27.5.1",
-    "jest-message-util": "^27.5.1",
-    "jest-mock": "^27.5.1",
-    "jest-pnp-resolver": "^1.2.2",
-    "jest-regex-util": "^27.5.1",
-    "jest-resolve": "^27.5.1",
-    "jest-runner": "^27.5.1",
-    "jest-resolve-dependencies": "^27.5.1",
-    "jest-runtime": "^27.5.1",
-    "jest-serializer": "^27.5.1",
-    "jest-snapshot": "^27.5.1",
-    "jest-validate": "^27.5.1",
-    "jest-util": "^27.5.1",
-    "jest-watcher": "^27.5.1",
-    "jest-worker": "^27.5.1",
-    "js-tokens": "^4.0.0",
-    "js-yaml": "^4.1.0",
-    "jsdom": "^16.7.0",
-    "json-parse-better-errors": "^1.0.2",
-    "jsesc": "^2.5.2",
-    "json-buffer": "^3.0.0",
-    "json-parse-even-better-errors": "^2.3.1",
-    "json-schema-traverse": "^0.4.1",
-    "json5": "^2.2.0",
-    "json-stable-stringify-without-jsonify": "^1.0.1",
-    "kleur": "^3.0.3",
-    "leven": "^3.1.0",
-    "keyv": "^3.1.0",
-    "latest-version": "^5.1.0",
-    "levn": "^0.4.1",
-    "load-json-file": "^4.0.0",
-    "lines-and-columns": "^1.2.4",
-    "lodash": "^4.17.21",
-    "locate-path": "^2.0.0",
-    "lodash.merge": "^4.6.2",
-    "long": "^4.0.0",
-    "lru-cache": "^6.0.0",
-    "lowercase-keys": "^1.0.1",
-    "make-dir": "^3.1.0",
-    "makeerror": "^1.0.12",
-    "memorystream": "^0.3.1",
-    "media-typer": "^0.3.0",
-    "merge-descriptors": "^1.0.1",
-    "merge-stream": "^2.0.0",
-    "methods": "^1.1.2",
-    "mime": "^1.6.0",
-    "micromatch": "^4.0.4",
-    "mimic-fn": "^2.1.0",
-    "mime-db": "^1.51.0",
-    "mime-types": "^2.1.34",
-    "minimatch": "^3.1.2",
-    "minimist": "^1.2.5",
-    "mimic-response": "^1.0.1",
-    "minizlib": "^2.1.2",
-    "minipass": "^3.1.6",
-    "mkdirp": "^1.0.4",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.34",
-    "ms": "^2.1.2",
-    "named-placeholders": "^1.1.2",
-    "mysql2": "^2.3.3",
-    "negotiator": "^0.6.3",
-    "natural-compare": "^1.4.0",
-    "nice-try": "^1.0.5",
-    "neo-async": "^2.6.2",
-    "node-addon-api": "^3.2.1",
-    "node-fetch": "^2.6.7",
-    "node-int64": "^0.4.0",
-    "node-releases": "^2.0.2",
-    "nodemon": "^2.0.15",
-    "nopt": "^5.0.0",
-    "normalize-path": "^3.0.0",
-    "normalize-package-data": "^2.5.0",
-    "normalize-url": "^4.5.1",
-    "npm-run-all": "^4.1.5",
-    "npmlog": "^5.0.1",
-    "npm-run-path": "^4.0.1",
-    "object-assign": "^4.1.1",
-    "object-is": "^1.1.5",
-    "object-inspect": "^1.12.0",
-    "object-keys": "^1.1.1",
-    "nwsapi": "^2.2.0",
-    "object.assign": "^4.1.2",
-    "object.values": "^1.1.5",
-    "object.entries": "^1.1.5",
-    "on-headers": "^1.0.2",
-    "on-finished": "^2.3.0",
-    "onetime": "^5.1.2",
-    "optionator": "^0.9.1",
-    "p-cancelable": "^1.1.0",
-    "p-limit": "^1.3.0",
-    "parent-module": "^1.0.1",
-    "p-try": "^1.0.0",
-    "p-locate": "^2.0.0",
-    "parse5": "^6.0.1",
-    "parseurl": "^1.3.3",
-    "path-exists": "^3.0.0",
-    "once": "^1.4.0",
-    "path-key": "^3.1.1",
-    "package-json": "^6.5.0",
-    "path-is-absolute": "^1.0.1",
-    "path-parse": "^1.0.7",
-    "path-to-regexp": "^0.1.7",
-    "path-type": "^3.0.0",
-    "pg-connection-string": "^2.5.0",
-    "parse-json": "^5.2.0",
-    "picocolors": "^1.0.0",
-    "picomatch": "^2.3.1",
-    "pify": "^3.0.0",
-    "pkg-dir": "^4.2.0",
-    "pirates": "^4.0.5",
-    "pidtree": "^0.3.1",
-    "prelude-ls": "^1.2.1",
-    "prepend-http": "^2.0.0",
-    "pretty-format": "^27.5.1",
-    "prompts": "^2.4.2",
-    "psl": "^1.8.0",
-    "pseudomap": "^1.0.2",
-    "prettier": "^2.5.1",
-    "proxy-addr": "^2.0.7",
-    "pump": "^3.0.0",
-    "random-bytes": "^1.0.0",
-    "qs": "^6.9.7",
-    "raw-body": "^2.4.3",
-    "range-parser": "^1.2.1",
-    "react-is": "^17.0.2",
-    "rc": "^1.2.8",
-    "read-pkg": "^3.0.0",
-    "regexp.prototype.flags": "^1.4.1",
-    "readable-stream": "^3.6.0",
-    "pupa": "^2.1.1",
-    "readdirp": "^3.6.0",
-    "regexpp": "^3.2.0",
-    "registry-url": "^5.1.0",
-    "require-directory": "^2.1.1",
-    "registry-auth-token": "^4.2.1",
-    "resolve": "^1.22.0",
-    "resolve-cwd": "^3.0.0",
-    "resolve.exports": "^1.1.0",
-    "resolve-from": "^4.0.0",
-    "responselike": "^1.0.2",
-    "rimraf": "^3.0.2",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "retry-as-promised": "^5.0.0",
-    "saxes": "^5.0.1",
-    "sass": "^1.49.9",
-    "pstree.remy": "^1.1.8",
-    "semver": "^7.3.5",
-    "semver-diff": "^3.1.1",
-    "seq-queue": "^0.0.5",
-    "sequelize-pool": "^7.1.0",
-    "send": "^0.17.2",
-    "sequelize": "^6.16.3",
-    "set-blocking": "^2.0.0",
-    "setprototypeof": "^1.2.0",
-    "serve-static": "^1.14.2",
-    "shebang-command": "^2.0.0",
-    "shell-quote": "^1.7.3",
-    "shebang-regex": "^3.0.0",
-    "side-channel": "^1.0.4",
-    "sisteransi": "^1.0.5",
-    "slash": "^3.0.0",
-    "source-map": "^0.6.1",
-    "signal-exit": "^3.0.7",
-    "source-map-support": "^0.5.21",
-    "source-map-js": "^1.0.2",
-    "spdx-exceptions": "^2.3.0",
-    "spdx-license-ids": "^3.0.11",
-    "sprintf-js": "^1.0.3",
-    "spdx-correct": "^3.1.1",
-    "spdx-expression-parse": "^3.0.1",
-    "stack-utils": "^2.0.5",
-    "statuses": "^1.5.0",
-    "sqlstring": "^2.3.2",
-    "string-width": "^4.2.3",
-    "string-length": "^4.0.2",
-    "string.prototype.padend": "^3.1.3",
-    "string.prototype.trimend": "^1.0.4",
-    "string.prototype.trimstart": "^1.0.4",
-    "string_decoder": "^1.3.0",
-    "strip-ansi": "^6.0.1",
-    "strip-bom": "^4.0.0",
-    "strip-final-newline": "^2.0.0",
-    "supports-color": "^7.2.0",
-    "strip-json-comments": "^3.1.1",
-    "supports-hyperlinks": "^2.2.0",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "tar": "^6.1.11",
-    "symbol-tree": "^3.2.4",
-    "terminal-link": "^2.1.1",
-    "text-table": "^0.2.0",
-    "throat": "^6.0.1",
-    "test-exclude": "^6.0.0",
-    "tmpl": "^1.0.5",
-    "to-fast-properties": "^2.0.0",
-    "to-readable-stream": "^1.0.0",
-    "to-regex-range": "^5.0.1",
-    "toidentifier": "^1.0.1",
-    "touch": "^3.1.0",
-    "toposort-class": "^1.0.1",
-    "tough-cookie": "^4.0.0",
-    "tr46": "^2.1.0",
-    "tsconfig-paths": "^3.12.0",
-    "type-detect": "^4.0.8",
-    "type-check": "^0.4.0",
-    "type-fest": "^0.20.2",
-    "punycode": "^2.1.1",
-    "type-is": "^1.6.18",
-    "uid-safe": "^2.1.5",
-    "typedarray-to-buffer": "^3.1.5",
-    "uglify-js": "^3.15.1",
-    "unbox-primitive": "^1.0.1",
-    "undefsafe": "^2.0.5",
-    "unpipe": "^1.0.0",
-    "uri-js": "^4.4.1",
-    "unique-string": "^2.0.0",
-    "update-notifier": "^5.1.0",
-    "universalify": "^0.1.2",
-    "utils-merge": "^1.0.1",
-    "util-deprecate": "^1.0.2",
-    "url-parse-lax": "^3.0.0",
-    "uuid": "^8.3.2",
-    "v8-compile-cache": "^2.3.0",
-    "v8-to-istanbul": "^8.1.1",
-    "validator": "^13.7.0",
-    "validate-npm-package-license": "^3.0.4",
-    "w3c-hr-time": "^1.0.2",
-    "walker": "^1.0.8",
-    "vary": "^1.1.2",
-    "webidl-conversions": "^6.1.0",
-    "w3c-xmlserializer": "^2.0.0",
-    "whatwg-encoding": "^1.0.5",
-    "whatwg-url": "^8.7.0",
-    "whatwg-mimetype": "^2.3.0",
-    "which": "^2.0.2",
-    "which-boxed-primitive": "^1.0.2",
-    "which-collection": "^1.0.1",
-    "which-typed-array": "^1.1.7",
-    "wide-align": "^1.1.5",
-    "widest-line": "^3.1.0",
-    "wordwrap": "^1.0.0",
-    "word-wrap": "^1.2.3",
-    "wkx": "^0.5.0",
-    "wrap-ansi": "^7.0.0",
-    "write-file-atomic": "^3.0.3",
-    "xmlchars": "^2.2.0",
-    "xml-name-validator": "^3.0.0",
-    "wrappy": "^1.0.2",
-    "y18n": "^5.0.8",
-    "xdg-basedir": "^4.0.0",
-    "yallist": "^4.0.0",
-    "yargs": "^16.2.0",
-    "ws": "^7.5.7",
-    "yargs-parser": "^20.2.9"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "jest",
+    "start": "run-p sass:watch watch",
+    "watch": "nodemon server.js",
+    "seeds": "node seeds/index.js",
+    "sass:build": "sass public/sass:public/stylesheets",
+    "sass:watch": "sass --watch public/sass:public/stylesheets"
   },
   "repository": {
     "type": "git",
@@ -526,5 +20,25 @@
   "bugs": {
     "url": "https://github.com/nicnolen/Travel-App/issues"
   },
-  "homepage": "https://github.com/nicnolen/Travel-App#readme"
+  "homepage": "https://github.com/nicnolen/Travel-App#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
+    "mysql2": "^2.3.3",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.49.8",
+    "sequelize": "^6.16.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "prettier": "2.5.1"
+  }
 }
