--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
-    "node-fetch": "2.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.49.8",
-    "sequelize": "^6.16.1"
+    "sequelize": "^6.16.1",
+    "fsevents": "^2.3.2"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
